// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/glob.js should find files on disk & output css 1`] = `
"/* 1.css */
.mc_one {
    color: red;
}
/* exclude/4.css */
.mc_four {
    color: red;
}
/* dir/3.css */
.mc_three {
    color: white;
}
/* dir/2.css */
.mc_two {
    background: blue;
}
"
`;

exports[`/glob.js should support exclusion patterns 1`] = `
"/* 1.css */
.mc_one {
    color: red;
}
/* dir/3.css */
.mc_three {
    color: white;
}
/* dir/2.css */
.mc_two {
    background: blue;
}
"
`;

exports[`/glob.js should use a default search 1`] = `
"/* 1.css */
.mc_one {
    color: red;
}
/* exclude/4.css */
.mc_four {
    color: red;
}
/* dir/3.css */
.mc_three {
    color: white;
}
/* dir/2.css */
.mc_two {
    background: blue;
}
"
`;
